--- a/src/app/admin/quan-ly-dat-ve/quan-ly-dat-ve.component.html
+++ b/src/app/admin/quan-ly-dat-ve/quan-ly-dat-ve.component.html
@@ -1,91 +1,19 @@
 <div class="tab-content" id="myTabContent">
-  <div
-    class="tab-pane fade show active"
-    id="home"
-    role="tabpanel"
-    aria-labelledby="home-tab"
-  >
-    <h1 class="display-4 text-center text-warning">quản lý danh sách phim</h1>
+  <div>
+    <h1 class="display-4 text-center text-warning">quản lý danh sách vé đặt</h1>
     <div class="container">
-      <form class="container__form">
-        <div class="container__form__input">
-          <input type="text" placeholder="nhập vào đường dẫn hình" id="image" />
-        </div>
-        <span id="imageErr"></span>
-        <div class="container__form__input">
-          <input type="text" placeholder="nhập vào mã phim" id="idProduct" />
-        </div>
-        <span id="idErr"></span>
-        <div class="container__form__input">
-          <input
-            type="text"
-            placeholder="nhập vào tên sản phim"
-            id="nameProduct"
-          />
-        </div>
-        <div class="container__form__input">
-          <textarea
-            placeholder="nhập vào thông tin mô tả"
-            id="Decription"
-            cols="50"
-            rows="5"
-          ></textarea>
-        </div>
-        <div class="container__form__input">
-          <input
-            type="text"
-            id="priceProduct"
-            placeholder="nhập vào đạo diễn"
-          />
-        </div>
-        <div class="container__form__input">
-          <input
-            placeholder="nhập vào diễn viên"
-            type="text"
-            id="amoutProduct"
-          />
-        </div>
-        <div class="container__form__input">
-          <input type="text" id="priceProduct" placeholder="trailer" />
-        </div>
-        <div class="container__form__input">
-          <input type="text" placeholder="thời lượng " id="rating" />
-        </div>
-        <div class="container__form__input">
-          <input placeholder="nhap vao ngay" id="amoutProduct" type="date" />
-        </div>
-        <span id="typeErr"></span>
-      </form>
+      <form class="container__form"></form>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-12"></div>
       </div>
-      <div class="row">
-        <div>
-          <button id="addNewProduct" class="btn btn-secondary mb-3">
-            thêm phim mới
-          </button>
-          <button
-            style="display: none"
-            id="idUpdate"
-            class="btn btn-secondary mb-3"
-          >
-            cập nhật
-          </button>
-          <button
-            style="display: none"
-            id="cancelUpdate"
-            class="btn btn-secondary mb-3"
-          >
-            hủy
-          </button>
-        </div>
-      </div>
       <div class="findproduct">
         <input
           id="idInput"
           type="text"
+          #input
+          (input)="findName(input)"
           placeholder="nhập vào mã hoặc tên sp để tìm kiếm"
         />
       </div>
@@ -95,40 +23,37 @@
           <table class="table table-bordered">
             <thead>
               <tr>
-                <th>hình ảnh</th>
-                <th>mã phim</th>
+                <th>mã vé</th>
+                <th>mã lịch chiếu</th>
+                <th>tài khoản</th>
+                <th>mã chỗ ngồi</th>
+                <th>tổng tiền</th>
                 <th>tên phim</th>
-                <th>mô tả</th>
-                <th>đạo diễn</th>
-                <th>diễn viên</th>
-                <th>thời lượng</th>
-                <th>trailer</th>
-                <th>ngày khởi chiếu</th>
+                <th>thời gian bắt đầu</th>
                 <th>xóa</th>
-                <th>sửa</th>
               </tr>
             </thead>
             <tbody id="contentProduct">
-              <tr>
+              <tr *ngFor="let ticket of listBookingTicket">
                 <td>
-                  <img style="width: 50px" src="" alt="" />
+                  {{ ticket.maVe }}
                 </td>
-                <td>item.id</td>
-                <td>item.name</td>
-                <td>item.description</td>
-                <td>item.price</td>
-                <td>item.inventory</td>
-                <td>item.rating</td>
-                <td>item.type</td>
-                <td>item.type</td>
+                <td>{{ ticket.maLichChieu }}</td>
+                <td>{{ ticket.taiKhoan.taiKhoan }}</td>
                 <td>
-                  <button class="btn btn-danger">
+                  <span *ngFor="let slot of ticket.maChoNgoi">
+                    {{ slot.tenGhe }}</span
+                  >
+                </td>
+                <td>{{ ticket.tongTien }}</td>
+                <td>{{ ticket.tenPhim }}</td>
+                <td>{{ ticket.thoiGianBD }}</td>
+                <td>
+                  <button
+                    class="btn btn-danger"
+                    (click)="deleteTicket(ticket.maVe)"
+                  >
                     <i class="fa fa-trash"></i>
-                  </button>
-                </td>
-                <td>
-                  <button class="btn btn-primary">
-                    <i class="fa fa-pencil"></i>
                   </button>
                 </td>
               </tr>
